--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,19 +2,25 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "resolutions": {
+    "prismjs": "^1.30.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "preinstall": "npx npm-force-resolutions"
   },
   "dependencies": {
     "highlight.js": "^11.11.1",
     "marked": "^15.0.11",
     "next": "15.3.1",
+    "prismjs": "1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
+    "refractor": "^5.0.0",
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1"
   },
@@ -22,6 +28,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "npm-force-resolutions": "^0.0.10",
     "typescript": "^5"
   }
 }
